# TARIC

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TARIC.sln  TARIC.slnx
.github/workflows/: ci.yml
clients/c/: Makefile
clients/c/include/: taric_client.h
clients/c/src/: taric_client.c
clients/esp32/: README.md
clients/esp32/main/: app_main.c
core/: Cargo.toml  README.md
core/src/: errors.rs  lib.rs  tests.rs  traits.rs  types.rs  verifier.rs
docs/: context.md
docs/api/: wire-format.md
examples/client-python/: README.md  requirements.txt  send.py  send_ctypes.py
examples/server-csharp/TaricServerDemo/: Program.cs  TaricFfi.cs
scripts/: setup-devices.sh  setup-server-key.sh
server/: Cargo.toml  README.md
server/src/: ffi.rs  lib.rs  main.rs
tests-e2e/: Makefile  compose.yml
tests-e2e/fixtures/: entries.jsonl
tests-e2e/fixtures/devices/: device.json
tests-e2e/runner/: main.py  requirements.txt
tools/verifier/: Cargo.toml
tools/verifier/src/: main.rs
