[package]
name = "taric-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "taric_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = { version = "0.11", default-features = false, features = ["std"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
thiserror = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
