[package]
name = "taric-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "taric_server"
crate-type = ["cdylib", "rlib"]

[dependencies]
taric-core = { path = "../core" }
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
ed25519-dalek = "2.1"
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[[bin]]
name = "taric-server"
path = "src/main.rs"
